--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,9 +15,11 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.2",
+    "chart.js": "^3.9.1",
     "firebase": "^10.6.0",
     "react": "^18.2.0",
     "react-alice-carousel": "^2.8.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-google-button": "^0.7.2",
     "react-hot-toast": "^2.4.1",
