--- a/final app/pubspec.yaml
+++ b/final app/pubspec.yaml
@@ -1,27 +1,29 @@
 name: intellijinteriors
 description: A new Flutter project.
 version: 1.0.0+1
-environment: 
+environment:
   sdk: '>=2.12.0 <3.0.0'
-dependencies: 
-  flutter: 
-    sdk: flutter
-  provider: ^6.0.5
+dependencies:
+  arkit_plugin: ^1.0.7
   cached_network_image: ^3.2.1
+  flutter:
+    sdk: flutter
   flutter_svg: ^1.1.6
   flutter_svg_provider: ^1.0.3
   intl: ^0.17.0
-dev_dependencies: 
-  flutter_test: 
+  provider: ^6.0.5
+  vector_math: ^2.1.4
+dev_dependencies:
+  flutter_test:
     sdk: flutter
-flutter: 
+flutter:
   uses-material-design: true
-  assets: 
+  assets:
     - assets/
     - assets/images/
-  fonts: 
+  fonts:
     - family: Roboto
-      fonts: 
+      fonts:
         - asset: assets/fonts/RobotoMedium.ttf
           weight: 500
         - asset: assets/fonts/RobotoRegular.ttf
@@ -29,7 +31,7 @@ flutter:
         - asset: assets/fonts/RobotoBlack.ttf
           weight: 900
     - family: Inter
-      fonts: 
+      fonts:
         - asset: assets/fonts/InterRegular.ttf
           weight: 400
         - asset: assets/fonts/InterMedium.ttf
@@ -39,14 +41,14 @@ flutter:
         - asset: assets/fonts/InterExtraBold.ttf
           weight: 800
     - family: Poppins
-      fonts: 
+      fonts:
         - asset: assets/fonts/PoppinsRegular.ttf
           weight: 400
     - family: Montserrat
-      fonts: 
+      fonts:
         - asset: assets/fonts/MontserratMedium.ttf
           weight: 500
     - family: Rubik
-      fonts: 
+      fonts:
         - asset: assets/fonts/RubikMedium.ttf
           weight: 500
